# JSON_fs

./: .gitignore  README.md  pyproject.toml  test_pydantic.py  test_schema.py
json_fs/: __init__.py  __main__.py  core.py  models.py  operations.py
tests/: test_json_fs.py
