[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_fs"
version = "0.1.0"
description = "A JSON interface for interacting with the filesystem"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Pich78/JSON_fs"
